<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:background="@color/creamy"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="0dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/back_Btn"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_praveen_minimal_outline_back"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo" />



        </LinearLayout>


        <TextView
            android:id="@+id/cate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:padding="15dp"
            android:text="@string/categories"
            android:textAllCaps="true"
            android:textColor="#3C3F41"
            android:textSize="30sp"
            android:textStyle="bold" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/green1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:elevation="4dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bal"
                android:paddingLeft="20dp"
                android:paddingTop="83dp"
                android:text="@string/hanging_plant"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hang_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="145dp"
                android:background="#00000000"
                android:text="@string/Hang_Btn"
                android:textColor="#FFFFFF" />

            <ImageView
                android:layout_width="278dp"
                android:layout_height="204dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="140dp"
                android:layout_marginRight="-74dp"
                android:src="@drawable/hang" />


        </RelativeLayout>






        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/green1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:elevation="4dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/bal"
                android:paddingTop="83dp"
                android:paddingRight="20dp"
                android:text="@string/indoor_plants"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="101dp"
                android:layout_height="192dp"
                android:layout_marginTop="23dp"
                android:src="@drawable/indo1" />


            <ImageView
                android:layout_width="192dp"
                android:layout_height="154dp"
                android:layout_marginTop="128dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/indo3" />

            <Button
                android:id="@+id/indo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="145dp"
                android:layout_marginRight="20dp"
                android:background="#00000000"
                android:text="@string/Indoor_Btn"
                android:textColor="#FFFFFF" />


        </RelativeLayout>






        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/green1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:elevation="4dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bal"
                android:paddingLeft="20dp"
                android:paddingTop="83dp"
                android:text="@string/garden_plants"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/gard_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="145dp"
                android:background="#00000000"
                android:text="@string/Garden_Btn"
                android:textColor="#FFFFFF" />


            <ImageView
                android:layout_width="98dp"
                android:layout_height="119dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="92dp"
                android:src="@drawable/garden1" />

            <ImageView
                android:layout_width="135dp"
                android:layout_height="96dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="160dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="95dp"

                android:layout_marginRight="68dp"
                android:src="@drawable/garden3" />

            <ImageView
                android:layout_width="121dp"
                android:layout_height="143dp"
                android:src="@drawable/garden2"
                android:layout_alignParentRight="true"
                android:layout_marginTop="113dp"
                android:layout_marginRight="52dp"
                />


        </RelativeLayout>








        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/green1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:elevation="4dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/bal"
                android:paddingTop="83dp"
                android:paddingRight="20dp"
                android:text="@string/aqua_plants"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="95dp"
                android:layout_height="89dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="128dp"
                android:src="@drawable/aqa2" />

            <ImageView
                android:layout_width="204dp"
                android:layout_height="131dp"
                android:layout_marginTop="67dp"
                android:src="@drawable/aqa4" />

            <ImageView
                android:layout_width="95dp"
                android:layout_height="89dp"
                android:layout_marginLeft="82dp"
                android:layout_marginTop="114dp"
                android:src="@drawable/aqa5" />

            <ImageView
                android:layout_width="88dp"
                android:layout_height="82dp"
                android:layout_marginLeft="134dp"
                android:layout_marginTop="125dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/right" />

            <Button
                android:id="@+id/aqa_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="145dp"
                android:layout_marginRight="20dp"
                android:background="#00000000"
                android:text="@string/Indoor_Btn"
                android:textColor="#FFFFFF" />


        </RelativeLayout>










        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/green1"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bal"
                android:paddingLeft="20dp"
                android:paddingTop="83dp"
                android:text="@string/medicinal_plants"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/medi_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="145dp"
                android:background="#00000000"
                android:text="@string/medical_Btn"
                android:textColor="#FFFFFF" />


            <ImageView
                android:layout_width="98dp"
                android:layout_height="119dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="220dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="26dp"
                android:layout_marginBottom="-119dp"
                android:src="@drawable/medi" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>